# tomcat-agent

./: .gitignore  .gitmessage  README.md  README.zh.md
pi-rust-wasm/: .env.example  .gitignore  Cargo.toml  INTEGRATION.md  README.md  build.rs  code_review_changes.md  config.toml  config.toml.example  package.json  pi.config.toml  pi.config.toml.example
pi-rust-wasm/.cursor/commands/: aggregate-status.md  commit-with-status.md  sync-develop-to-branches.md  sync-main-to-branches.md  update-coverage.md  verify-openai-apis.md
pi-rust-wasm/.cursor/rules/: commit-guard.mdc
pi-rust-wasm/agents/: CONSTITUTION_REMEDIATION_TASK01.md  Dispatcher.md  INTEGRATION_MERGE_AND_ACCEPTANCE.md  Jerry.md  Nibbles.md  PLAN.md  Spike.md  TASK_BOARD.md  TASK_BOARD_002.md  Tom.md  chat_agent.md  infra_agent.md  integration_test_agent.md  llm_agent.md  primitives_tools_agent.md  session_cli_agent.md  specs_test.md  wasm_plugin_agent.md
pi-rust-wasm/agents/TASK_BOARD_002/: README.md
pi-rust-wasm/agents/plan/: DEBUG_SPEC.md  PLAN_EXAMPLE_CLI.md  PLAN_EXAMPLE_TASK21.md  PLAN_SKELETON.md  PLAN_SPEC.md  PLAN_TASK05_PI_MONO_COMPAT.md
pi-rust-wasm/agents/status/: feature-long-lived-vm.md
pi-rust-wasm/assets/js/: pi_ai_shim.js  pi_bridge.js  pi_coding_agent_shim.js  pi_main_loop.js  pi_ms_shim.js  pi_tui_shim.js  pi_typebox_shim.js
pi-rust-wasm/docs/: 01-infrastructure.md  02-llm-module.md  02-session-and-cli.md  02-wasm-runtime-and-plugin.md  03-agent-loop.md  INTEGRATION.md  README.md  TODO.md  TODOS.md  tool-catalog.md  user-guide.md
pi-rust-wasm/docs/architecture/: agent-loop.md  context-management.md  directory-structure.md  host-core-layer.md  infrastructure-layer.md  interrupt-and-cancellation.md  llm-multiprovider-integration.md  llm-stream-events-cli-pipeline.md
pi-rust-wasm/docs/reports/: agent-tools-comparison.md  agent_error_handling_cross_repo.md  async-handler-in-long-lived-vm.md  builtin-tool-description-cross-agent-study.md  compaction-prompt-cc-vs-pi.md  context-management-deep-dive.md  context-management-refactoring-proposal.md  directory-structure.md  extension_api_gap_analysis.md  extension_compat_matrix.md  init-experience-and-embedded-assets.md  llm-tool-rounds-cli-display-thinking-protocol.md  multi-agent-openai-api-integration.md  multi-session-design-comparison.md  nibbles_4.3_e2e_recap_report.md  pi_mono_gap_analysis.md  plan-mode-execution-playbook-T2-P0-001.md  plugin_skills_first_principles_pi_rust_wasm.md  plugin_systems_openclaw_pi_mono_pi_agent_rust.md  task-05c-tier2-change-report.md  task-05d-compat-research.md  tool-message-chain-violation-root-cause.md  traceability-story8-context.md  vm-actor-shutdown-dead-code-analysis.md  wasm_runtime_migration_analysis.md  wasmedge-dylib-sip-subprocess.md  wasmedge-standalone-build-and-linking.md
pi-rust-wasm/docs/sharing/: claw-agent-design.md  spec-driven-agent-workflow.md
pi-rust-wasm/docs/status/: develop.md  feature-agent-loop-split.md  feature-chat-path-env.md  feature-cli-chat.md  feature-collapse-to-chatmsg.md  feature-compaction-prompt-9section.md  feature-context-async-compaction.md  feature-context-management-v2.md  feature-context-management.md  feature-directory_refactor.md  feature-drag-deny-cwd-runtime.md  (+18 more)
pi-rust-wasm/scripts/: aggregate-status.sh  backfill_transcript_message_ids.py  build-custom-quickjs.sh  install-wasmedge.sh  pre-commit-check.sh  run-integration-tests.sh  test-groups.sh  verify-openai-apis.sh
pi-rust-wasm/src/: README.md  config.rs  error.rs  event_bus.rs  events.rs  lib.rs  logging.rs  main.rs  platform.rs
pi-rust-wasm/status/: README.md  develop.md  feature-async-hostcall.md  feature-cli-chat.md  feature-cli-commands.md  feature-infra.md  feature-js-api-alignment.md  feature-llm.md  feature-plugin-lifecycle.md  feature-primitives-tools.md  feature-session-cli.md  feature-wasm-plugin.md
pi-rust-wasm/tests/: agent_loop_tests.rs  audit_tests.rs  bash_assignment_deny.rs  cli_tests.rs  context_management_tests.rs  cwd_lazy_prompt_e2e.rs  dragged_path_e2e.rs  event_tests.rs  hostcall_tests.rs  js_api_alignment_tests.rs  llm_tests.rs  long_lived_vm_tests.rs  openai_responses_integration_tests.rs  path_command_e2e.rs  plugin_tests.rs  primitives_tools_tests.rs  read_tool_tests.rs  robustness_tests.rs  search_files_tests.rs  session_tests.rs  system_prompt_cwd_priority.rs  tool_catalog_doc.rs  wasmedge_e2e_tests.rs
tomcat/: .env.example  .gitignore  Cargo.toml  README.md  build.rs  package.json  tomcat.config.toml  tomcat.config.toml.example
tomcat/.config/: nextest.toml
tomcat/agents/: Dispatcher.md  INTEGRATION_MERGE_AND_ACCEPTANCE.md  Nibbles.md  Spike.md  Tom.md
tomcat/docs/: INTEGRATION.md  README.md  TODOS.md  tool-catalog.md  user-guide.md  user-guide.zh.md
tomcat/scripts/: backfill_transcript_message_ids.py  build-web-search-backends.mjs  install.sh  pre-commit-check.sh  run-integration-tests.sh  test-groups.sh  verify-openai-apis.sh
tomcat/src/: README.md  lib.rs  main.rs  test_support.rs
tomcat/src/api/: mod.rs  (+1 more)
tomcat/tests/: agent_loop_tests.rs  audit_tests.rs  bash_assignment_deny.rs  chat_git_preflight_tests.rs  checkpoint_cli_e2e.rs  checkpoint_integration_tests.rs  cli_tests.rs  context_management_tests.rs  current_tail_guard_real_llm_tests.rs  cwd_lazy_prompt_e2e.rs  event_tests.rs  hostcall_tests.rs  integration_gate_config_tests.rs  js_api_alignment_tests.rs  llm_gateway_toggle_tests.rs  llm_tests.rs  long_lived_vm_tests.rs  model_presets_live_smoke_tests.rs  nested_cli_guard_tests.rs  openai_files_integration_tests.rs  openai_responses_integration_tests.rs  path_command_e2e.rs  plan_e2e_with_mock_llm_tests.rs  plan_real_llm_cli_e2e.rs  plan_real_llm_inprocess_tests.rs  plan_runtime_integration_tests.rs  plugin_tests.rs  primitives_tools_tests.rs  prompt_size_budget.rs  quickjs_e2e_tests.rs  read_tool_tests.rs  reasoning_continuity_real_llm_tests.rs  resume_hydration_cli_e2e.rs  resume_hydration_perf.rs  resume_hydration_tests.rs  robustness_tests.rs  search_files_tests.rs  serve_ask_question_tests.rs  serve_multi_session.rs  serve_robustness_tests.rs  (+11 more)
(+1654 files in other folders)
