[package]
name = "pi_awsm"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tracing-appender = "0.2"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
toml = "0.8"

[dev-dependencies]
dotenvy = "0.15"
tempfile = "3.10"
